Attestation runs post publish success

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,15 +3,15 @@ name: Build and Attest
 
 on:
   workflow_run:
-    workflows: ["Build and Publish Docker Image"]
-    types: [ completed ]
+    workflows:
+      - "Build and Publish Docker Image"   # must exactly match docker-publish.yml’s `name:`
+    types:
+      - completed
 
 jobs:
   release:
-    # only run attest if the docker-publish run succeeded
-    if: ${{ github.event.workflow_run.conclusion == 'success' &&
-            startsWith(github.event.workflow_run.head_ref, 'v') 
-        }}
+    # only run if the upstream job actually succeeded
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
